// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynamic imports babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/bundle-3M9lVmk8.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-3M9lVmk8.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-esm 2`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

import('./bundle-3M9lVmk8.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-3M9lVmk8.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/bundle-kHKBi9mZ.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-kHKBi9mZ.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-lib 2`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

import('./bundle-kHKBi9mZ.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-kHKBi9mZ.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-umd 1`] = `
[
  "umd/bundle-ABwVSm2R.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-ABwVSm2R.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: umd

import('./bundle-ABwVSm2R.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-ABwVSm2R.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/bundle-zhaXZT2y.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-zhaXZT2y.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-esm 2`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

import('./bundle-zhaXZT2y.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-zhaXZT2y.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/bundle-h_GDa_5w.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-h_GDa_5w.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-lib 2`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

import('./bundle-h_GDa_5w.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-h_GDa_5w.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/bundle-xYfI8Fmt.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-xYfI8Fmt.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: umd

import('./bundle-xYfI8Fmt.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-xYfI8Fmt.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/bundle-Zh8W98hu.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-Zh8W98hu.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-esm 2`] = `
[
  "esm/index-browser-legacy-esm.js",
  "var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

import('./bundle-Zh8W98hu.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-Zh8W98hu.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/bundle-vPF_A4rU.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-vPF_A4rU.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-lib 2`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
import('./bundle-vPF_A4rU.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-vPF_A4rU.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/bundle-fXSu6JQY.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-fXSu6JQY.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: umd

import('./bundle-fXSu6JQY.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-fXSu6JQY.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/bundle-bXN382qE.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-bXN382qE.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-esm 2`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import('./bundle-bXN382qE.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-bXN382qE.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/bundle-kysAUAQe.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-kysAUAQe.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-lib 2`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

import('./bundle-kysAUAQe.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-kysAUAQe.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-umd 1`] = `
[
  "umd/bundle-DoGq67TH.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-DoGq67TH.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: umd

import('./bundle-DoGq67TH.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-DoGq67TH.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-esm 1`] = `
[
  "esm/bundle-AuRQPVx5.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-AuRQPVx5.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-esm 2`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

import('./bundle-AuRQPVx5.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-AuRQPVx5.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-lib 1`] = `
[
  "lib/bundle-1obYgplG.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-1obYgplG.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-current-lib 2`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

import('./bundle-1obYgplG.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-1obYgplG.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/bundle-fcjp6VW1.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-fcjp6VW1.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-esm 2`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

import('./bundle-fcjp6VW1.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-fcjp6VW1.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/bundle-ERO7dll3.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-ERO7dll3.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-experimental-lib 2`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

import('./bundle-ERO7dll3.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-ERO7dll3.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/bundle-0b7TsP3m.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-0b7TsP3m.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-esm 2`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

import('./bundle-0b7TsP3m.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-0b7TsP3m.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/bundle-HVCtTKei.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-HVCtTKei.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-legacy-lib 2`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

import('./bundle-HVCtTKei.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-HVCtTKei.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-esm 1`] = `
[
  "esm/bundle-eJ16P6Ik.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-eJ16P6Ik.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-esm 2`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

import('./bundle-eJ16P6Ik.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-eJ16P6Ik.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-lib 1`] = `
[
  "lib/bundle-TH51JAs8.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-TH51JAs8.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: electron-stable-lib 2`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

import('./bundle-TH51JAs8.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-TH51JAs8.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-current-lib 1`] = `
[
  "lib/bundle-Pctkl0OM.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-Pctkl0OM.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-current-lib 2`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-Pctkl0OM.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-Pctkl0OM.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/bundle-9YJidWY8.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-9YJidWY8.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-experimental-lib 2`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-9YJidWY8.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-9YJidWY8.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/bundle-N5SU9kaz.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-N5SU9kaz.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-legacy-lib 2`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-N5SU9kaz.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-N5SU9kaz.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/bundle-jpwc-oDR.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-jpwc-oDR.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-stable-lib 2`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-jpwc-oDR.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-jpwc-oDR.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/bundle-_71PWQLV.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-_71PWQLV.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 3`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

import('./bundle-_71PWQLV.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-_71PWQLV.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-lib 1`] = `
[
  "lib/bundle-kA87Rk4F.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-kA87Rk4F.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-lib 2`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

import('./bundle-kA87Rk4F.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-kA87Rk4F.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/bundle-BK-paazK.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-BK-paazK.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-mjs 2`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

import('./bundle-BK-paazK.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-BK-paazK.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/bundle-DAKsN3xY.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-DAKsN3xY.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 3`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

import('./bundle-DAKsN3xY.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-DAKsN3xY.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/bundle-az7ZSxOo.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-az7ZSxOo.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-lib 2`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

import('./bundle-az7ZSxOo.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-az7ZSxOo.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/bundle-UAQNGTBj.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-UAQNGTBj.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-mjs 2`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

import('./bundle-UAQNGTBj.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-UAQNGTBj.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/bundle-R7c4FVRE.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-R7c4FVRE.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 3`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

import('./bundle-R7c4FVRE.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-R7c4FVRE.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/bundle-3n_KI-v0.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-3n_KI-v0.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-lib 2`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

import('./bundle-3n_KI-v0.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-3n_KI-v0.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/bundle-YzUH8RD0.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-YzUH8RD0.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-mjs 2`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

import('./bundle-YzUH8RD0.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-YzUH8RD0.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/bundle-9YUm9Bbo.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-9YUm9Bbo.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 3`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

import('./bundle-9YUm9Bbo.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-9YUm9Bbo.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/bundle-hCJ2hPkz.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-hCJ2hPkz.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-lib 2`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

import('./bundle-hCJ2hPkz.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-hCJ2hPkz.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/bundle-N2mxTj-7.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-N2mxTj-7.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-mjs 2`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import('./bundle-N2mxTj-7.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-N2mxTj-7.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/bundle-NLqBMetY.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-NLqBMetY.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-esm 2`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
import("./bundle-NLqBMetY.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-NLqBMetY.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/bundle-utDa9_O8.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-utDa9_O8.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-lib 2`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
"use strict";
import("./bundle-utDa9_O8.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-utDa9_O8.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-umd 1`] = `
[
  "umd/bundle-b2GC_i-K.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: function() {
            return bar;
        },
        foo: function() {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-b2GC_i-K.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import("./bundle-b2GC_i-K.js").then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ "./bundle-b2GC_i-K.js").then(({ bar })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/bundle-oBG6aZke.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-oBG6aZke.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-esm 2`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
import("./bundle-oBG6aZke.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-oBG6aZke.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/bundle-azzoyFhI.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-azzoyFhI.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-lib 2`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
"use strict";
import("./bundle-azzoyFhI.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-azzoyFhI.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/bundle-b2GC_i-K.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: function() {
            return bar;
        },
        foo: function() {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-b2GC_i-K.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import("./bundle-b2GC_i-K.js").then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ "./bundle-b2GC_i-K.js").then(({ bar })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/bundle-92DHqCjr.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-92DHqCjr.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-esm 2`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
import("./bundle-92DHqCjr.js").then(function(result) {
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-92DHqCjr.js").then(function(param) {
    var bar = param.bar;
    bar();
});
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/bundle-E6nrlNAi.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-E6nrlNAi.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-lib 2`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
import("./bundle-E6nrlNAi.js").then(function(result) {
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-E6nrlNAi.js").then(function(param) {
    var bar = param.bar;
    bar();
});
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/bundle-b2GC_i-K.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: function() {
            return bar;
        },
        foo: function() {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-b2GC_i-K.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import("./bundle-b2GC_i-K.js").then(function(result) {
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ "./bundle-b2GC_i-K.js").then(function(param) {
        var bar = param.bar;
        bar();
    });
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/bundle-2ydu3TQy.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-2ydu3TQy.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-esm 2`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
import("./bundle-2ydu3TQy.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-2ydu3TQy.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/bundle-ktd5u-Mc.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-ktd5u-Mc.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-lib 2`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
"use strict";
import("./bundle-ktd5u-Mc.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-ktd5u-Mc.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-umd 1`] = `
[
  "umd/bundle-b2GC_i-K.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: function() {
            return bar;
        },
        foo: function() {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-b2GC_i-K.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import("./bundle-b2GC_i-K.js").then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ "./bundle-b2GC_i-K.js").then(({ bar })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-esm 1`] = `
[
  "esm/bundle-cJW1qcOY.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-cJW1qcOY.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-esm 2`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
import("./bundle-cJW1qcOY.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-cJW1qcOY.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-lib 1`] = `
[
  "lib/bundle-aqzY33Db.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-aqzY33Db.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-current-lib 2`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
"use strict";
import("./bundle-aqzY33Db.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-aqzY33Db.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/bundle-okQF6WJs.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-okQF6WJs.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-esm 2`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
import("./bundle-okQF6WJs.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-okQF6WJs.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/bundle-90F0lDEa.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-90F0lDEa.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-experimental-lib 2`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
"use strict";
import("./bundle-90F0lDEa.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-90F0lDEa.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/bundle-2IkUES5f.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-2IkUES5f.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-esm 2`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
import("./bundle-2IkUES5f.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-2IkUES5f.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/bundle-ebugfJSh.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-ebugfJSh.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-legacy-lib 2`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
"use strict";
import("./bundle-ebugfJSh.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-ebugfJSh.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-esm 1`] = `
[
  "esm/bundle-a93ZhMR_.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-a93ZhMR_.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-esm 2`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
import("./bundle-a93ZhMR_.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-a93ZhMR_.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-lib 1`] = `
[
  "lib/bundle-Hqs1JeVJ.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-Hqs1JeVJ.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: electron-stable-lib 2`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
"use strict";
import("./bundle-Hqs1JeVJ.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-Hqs1JeVJ.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-current-lib 1`] = `
[
  "lib/bundle-3zLFMKSE.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-3zLFMKSE.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-current-lib 2`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
"use strict";
Promise.resolve().then(()=>require("./bundle-3zLFMKSE.js")).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ "./bundle-3zLFMKSE.js")).then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/bundle-yUS5CVMs.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-yUS5CVMs.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-experimental-lib 2`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
"use strict";
Promise.resolve().then(()=>require("./bundle-yUS5CVMs.js")).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ "./bundle-yUS5CVMs.js")).then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/bundle-XkHFZVb6.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-XkHFZVb6.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-legacy-lib 2`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
Promise.resolve().then(()=>require("./bundle-XkHFZVb6.js")).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ "./bundle-XkHFZVb6.js")).then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/bundle-ax2or5ZR.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-ax2or5ZR.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-stable-lib 2`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
"use strict";
Promise.resolve().then(()=>require("./bundle-ax2or5ZR.js")).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ "./bundle-ax2or5ZR.js")).then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/bundle-a0TmwKVU.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-a0TmwKVU.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 3`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
"use strict";
import("./bundle-a0TmwKVU.cjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-a0TmwKVU.cjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-lib 1`] = `
[
  "lib/bundle-nwisUpj0.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-nwisUpj0.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-lib 2`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
"use strict";
import("./bundle-nwisUpj0.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-nwisUpj0.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/bundle-bDQYClYL.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-bDQYClYL.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-mjs 2`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
import("./bundle-bDQYClYL.mjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-bDQYClYL.mjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/bundle-bGhDu9dC.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-bGhDu9dC.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 3`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
"use strict";
import("./bundle-bGhDu9dC.cjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-bGhDu9dC.cjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/bundle-7mP55VlV.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-7mP55VlV.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-lib 2`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
"use strict";
import("./bundle-7mP55VlV.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-7mP55VlV.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/bundle-Oxmf1_V_.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-Oxmf1_V_.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-mjs 2`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
import("./bundle-Oxmf1_V_.mjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-Oxmf1_V_.mjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/bundle-_ofX8Blw.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-_ofX8Blw.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 3`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
import("./bundle-_ofX8Blw.cjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-_ofX8Blw.cjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/bundle-f1fTiCe3.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-f1fTiCe3.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-lib 2`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
import("./bundle-f1fTiCe3.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-f1fTiCe3.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/bundle-boLczVlg.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-boLczVlg.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-mjs 2`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
import("./bundle-boLczVlg.mjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-boLczVlg.mjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/bundle-_xpKJhek.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-_xpKJhek.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 3`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
"use strict";
import("./bundle-_xpKJhek.cjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-_xpKJhek.cjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/bundle-fRyzw-H0.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-fRyzw-H0.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-lib 2`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
"use strict";
import("./bundle-fRyzw-H0.js").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-fRyzw-H0.js").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/bundle-jxsTfifR.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-jxsTfifR.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-mjs 2`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
import("./bundle-jxsTfifR.mjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-jxsTfifR.mjs").then(({ bar })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;
